# geoarches

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: lint.yml  unit_tests.yml
docs/: index.md  user_guide.md
docs/archesweather/: eval.md  index.md  run.ipynb  setup.md  train.md
docs/contributing/: bug.md  contribute.md  testing.md
docs/getting_started/: installation.md  using_geoarches.md
docs/user_guide/: args.md  custom_models.md  evaluate.md  index.md  train.md
documentation/: archesweather-tutorial.ipynb  archesweatherflow_pipeline.md  archesweathergen_pipeline.md
geoarches/: data  main_hydra.py
geoarches/backbones/: archesweather.py  archesweather_layers.py
geoarches/backbones/weatherlearn_utils/: crop.py  earth_position_index.py  patch_embed.py  shift_window_mask.py
geoarches/configs/: config.yaml
geoarches/configs/cluster/: example-slurm.yaml  local.yaml
geoarches/configs/dataloader/: dcpp.yaml  era5.yaml  era5pred.yaml
geoarches/configs/module/: archesweather.yaml  archesweathergen.yaml
geoarches/configs/module/metrics/: era5_brier.yaml  era5_deterministic.yaml  era5_ensemble.yaml
geoarches/dataloaders/: era5.py  era5pred.py
geoarches/download/: dl_era.py  dl_forecast.py  dl_hres.py
geoarches/evaluation/: compute_quantiles.py  eval_multistep.py  metric_registry.py  plot.py  submit_eval.sh
geoarches/inference/: encode_dataset.py
geoarches/lightning_modules/: diffusion.py  diffusion_ensemble.py  forecast.py
geoarches/metrics/: brier_skill_score.py  deterministic_metrics.py  deterministic_metrics_legacy.py  ensemble_metrics.py  label_wrapper.py  rank_histogram.py  spherical_power_spectrum.py
geoarches/stats/: climatology_metrics.pt  dcpp_spatial_norm_stats.pt
geoarches/utils/: graph_utils.py  visualization.py
src/geoarches/: CONTRIBUTING.md  README.md  main_hydra.py  submit.py
src/geoarches/backbones/: archesweather.py  archesweather_layers.py  dit.py
src/geoarches/backbones/weatherlearn_utils/: README.md  pad.py  patch_embed.py  patch_recovery.py
src/geoarches/configs/: __init__.py  config.yaml
src/geoarches/configs/dataloader/: era5pred.yaml
src/geoarches/configs/module/: archesweather.yaml  forecast-archesweather-legacy-1p1.yaml  forecast-archesweather-legacy.yaml  geoaw-diffusion.yaml
src/geoarches/dataloaders/: dcpp.py  era5.py  era5pred.py  netcdf.py  zarr.py
src/geoarches/evaluation/: compute_quantiles.py  eval_multistep.py  metric_registry.py
src/geoarches/inference/: encode_dataset.py  inference_multistep.py
src/geoarches/lightning_modules/: __init__.py  base_module.py  diffusion.py
src/geoarches/metrics/: brier_skill_score.py  deterministic_metrics.py  ensemble_metrics.py  label_wrapper.py  metric_base.py  rank_histogram.py  spherical_power_spectrum.py
src/geoarches/stats/: deltapred24_aws_denorm.pt
src/geoarches/utils/: tensordict_utils.py
tests/dataloaders/: test_dcpp.py  test_era5.py
tests/evaluation/: test_metric_registry.py
tests/metrics/: test_brier_skill_score.py  test_ensemble_metrics.py  test_label_wrapper.py  test_metric_base.py  test_rank_histogram.py  test_spherical_power_spectrum.py
