[project]
name = "geoarches"
version = "0.1.0"
description = "Machine learning package for training, running, and evaluating ML models on geospatial data (specifically climate and weather data)"
authors = [
    {name = "ARCHES lab @ INRIA"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "xarray (>=2025.1.1,<2026.0.0)",
    "submitit (>=1.5.2,<2.0.0)",
    "diffusers (==0.29.2)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "wandb (>=0.19.3,<0.20.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "hydra-core (==1.3.2)",
    "axial-attention (>=0.6.1,<0.7.0)",
    "lightning (>=2.5.0.post0,<3.0.0)",
    "zarr (>=3.0.0,<4.0.0)",
    "einops (>=0.8.0,<0.9.0)",
    "ruff (>=0.9.2,<0.10.0)",
    "tensordict (>=0.6.2,<0.7.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "pyshtools (>=4.13.1,<5.0.0)",
    "fasteners (>=0.19,<0.20)",
    "timm (>=1.0.13,<2.0.0)",
    "dask (>=2024.12.1,<2025.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
target-version = 'py310'

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# isort - I
# pep8-naming - N
# Warning - W
select = ["E4", "E7", "E9", "F", "I", "N", "W"]
ignore = [
    "E731", # lambda-assignment
    "N804", # Checks for class methods that use a name other than cls for their first argument.
    "N813", # Checks for CamelCase imports that are aliased to lowercase names.
    "N806", # Variable in function should be lowercase.
]

[tool.ruff.lint.per-file-ignores]
"src/geoarches/backbones/weatherlearn_utils/*" = ["N"]
"src/geoarches/lightning_modules/__init__.py" = ["F401"]

[project.scripts]
geoarches-main = 'geoarches.main_hydra:main'
geoarches-submit = 'geoarches.submit:main'
geoarches-eval = 'geoarches.evaluation.eval_multistep:main'